k8s/07-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ed18c/gateway-service:5b1dd44
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: relay
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - name: http
      protocol: TCP
      port: 80 # We use port 80 for the service to make it web-standard
      targetPort: 3000
  type: ClusterIP
