k8s/09-resource-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-service
  namespace: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-service
  template:
    metadata:
      labels:
        app: resource-service
    spec:
      # --- Wait for Postgres to be ready before starting ---
      containers:
        - name: resource-service
          image: ed18c/resource-service:c523ad3
          ports:
            - containerPort: 3002
          resources:
            limits:
              memory: "256Mi"
              #cpu: "200m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /health # Or whatever health endpoint your app has
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: resource-service
  namespace: relay
  labels:
    app: resource-service
spec:
  selector:
    app: resource-service
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
